--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
 
 #output to a temp_folder/file
-logging.file=./logs/application.log
-logging.file.path=/path/to/a/file
+logging.file.path=./logs/
+logging.file.name=myapplication.log
 
 
 spring.application.name = "Redhat Logging Demo"
