log config changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,11 @@ spring.jpa.hibernate.ddl-auto= update
 
 #output to a temp_folder/file
 logging.file=./logs/application.log
-logging.file.path=/path/to/a/file
+#logging.file.path=/path/to/a/file
 
 
 spring.application.name = "Redhat Logging Demo"
 
+
+
+logging.
